ProximaNova-Regular and ProximaNova-Bold fonts have been added and connected.

--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -1,4 +1,9 @@
 body {
     background-color: $back;
     color: $text;
+    font-family: ProximaNova-Regular;
+}
+
+h1 {
+    font-family: ProximaNova-Bold;
 }
