Added settings for working with pictures, "image-webpack-loader" is installed.

--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -7,3 +7,10 @@ body {
 h1 {
     font-family: ProximaNova-Bold;
 }
+
+.image {
+    width: 1507px;
+    height: 500px;
+    background-size: cover;
+    background-image: url('img/cubes.jpg');
+}
