Added color variables.

--- a/src/style/_var.scss
+++ b/src/style/_var.scss
@@ -1,2 +1,5 @@
-$back: rgb(110, 17, 156);
-$text: rgb(247, 245, 245);
+$white: #FFFFFF;
+$orange: #FF8B00;
+$blue: #7050E5;
+$light-gray: #F8F8F8;
+$dark-gray: #363636;
