File extension changed from 'scss' on 'css'.

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 @import 'style/fonts';
 @import 'style/var';
 @import 'style/main';
-@import 'style/reset.scss';
+@import 'style/reset.css';
 @import 'style/header.scss';
 
 
